postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "64Mi"    # Request only 64Mi of memory to minimize usage
              cpu: "50m"        # Request a very small CPU allocation (50m)
            limits:
              memory: "128Mi"   # Set an upper memory limit to prevent high usage
              cpu: "100m"       # Set a small CPU limit to keep costs down
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data/pgdata  # Update to use subdirectory
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
