reflect_places_1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reflect-places-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reflect-places-1
  template:
    metadata:
      labels:
        app: reflect-places-1
    spec:
      containers:
        - name: reflect-places-1
          # image: borissolomonia/reflect_places_1:latest #dockerhub ზე განთავსებული იმიჯია საჭირო
          image: IMAGE_URL
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "100m"          # Reduced CPU request
              memory: "128Mi"      # Reduced Memory request
            limits:
              cpu: "100m"          # Adjusted CPU limit
              memory: "128Mi"
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: reflect-places-1
# spec:
#   ports:
#     - port: 8081
#       targetPort: 8081
#   selector:
#     app: reflect-places-1
apiVersion: v1
kind: Service
metadata:
  name: reflect-places-1
spec:
  type: LoadBalancer
  selector:
    app: reflect-places-1
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
