api-brooks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-brooks-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
    # Important: The domain of your frontend
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://www.brooks-dusura.uk"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: api.brooks-dusura.uk
      http:
        paths:
          - path: /user-auth
            pathType: Prefix
            backend:
              service:
                name: authentication-server
                port:
                  number: 8081
  tls:
    - hosts:
        - api.brooks-dusura.uk
      secretName: brooks-tls
