cert-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brooks-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://www.brooks-dusura.uk"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: www.brooks-dusura.uk
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: reflect-places-1
                port:
                  number: 8081
          # "Catch-all" rule for your React app (brooks-app-service).
          # This should serve index.html for all unrecognized paths,
          # along with static files in /static/js etc.
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brooks-app-service
                port:
                  number: 80
          - path: /profile
            pathType: Prefix
            backend:
              service:
                name: brooks-app-service
                port:
                  number: 80        
  tls:
    - hosts:
        - www.brooks-dusura.uk
      secretName: brooks-tls
