your-domain.com.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: your-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brooks-app-service
                port:
                  number: 80
  tls:
    - hosts:
        - your-domain.com
      secretName: test-tls-secret
